вывод карточек категорий
