# frontend2/src/pages/categories/api/index.ts
@@ -1,3 +1,7 @@
 import { getCategoriesList } from './categories.ts';
 
+import type { Category } from './categories.ts';
+
 export { getCategoriesList };
+
+export type { Category };
